# typjson

./: .gitignore  README.md  jsoner.py  pyproject.toml  requirements.txt  test_json.py
.circleci/: config.yml
tests/: test_json.py  test_tagged_union.py  test_types.py  test_typing.py  test_typjson.py  test_union.py
typ/: encoding.py  json.py  tagged_union.py  union.py
typjson/: encoding.py  json.py  jsoner.py  typing.py
